--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:lrc="http://schemas.android.com/apk/res-auto"
     android:id="@+id/music_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,12 +34,17 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/lrcView"
+    <me.wcy.lrcview.LrcView
+        android:id="@+id/lrc_view_full"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="1" />
-
+        android:layout_weight="1"
+        android:layout_marginTop="10dp"
+        lrc:lrcAnimationDuration="1000"
+        lrc:lrcCurrentTextColor="@color/white"
+        lrc:lrcDividerHeight="24dp"
+        lrc:lrcNormalTextColor="@color/white_50p"
+        lrc:lrcTextSize="@dimen/text_size_common" />
 
     <LinearLayout
         android:layout_width="match_parent"
