--- a/app/src/main/res/layout/include_app_bar.xml
+++ b/app/src/main/res/layout/include_app_bar.xml
@@ -11,5 +11,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:fitsSystemWindows="true"
+        app:navigationIcon="@drawable/ic_back"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 </android.support.design.widget.AppBarLayout>
