--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00aaff</color>
-    <color name="colorPrimaryDark">#00aaff</color>
-    <color name="colorAccent">#00aaff</color>
+    <color name="colorPrimary">#00bbff</color>
+    <color name="colorPrimaryDark">#0088ff</color>
+    <color name="colorAccent">#00e1ff</color>
 
     <color name="white">@android:color/white</color>
     <color name="white_8p">#14FFFFFF</color>
