--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -1,12 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nilin.etherealmuisc.fragment.LocalFragment">
 
-    <TextView
+    <Button
+        android:id="@+id/bt_local_music"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="11111" />
+        android:layout_height="70dp"
+        android:background="@color/colorAccent"
+        android:layout_alignParentBottom="true"
+        android:text="本地音乐" />
 
-</FrameLayout>
+</RelativeLayout>
