--- a/app/src/main/res/layout/activity_music_include.xml
+++ b/app/src/main/res/layout/activity_music_include.xml
@@ -20,21 +20,26 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <include layout="@layout/include_music_tab_bar" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
+            android:layout_weight="10"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
-        <include
-            layout="@layout/include_play_bar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/play_bar_height"
-            android:layout_gravity="bottom" />
-    </FrameLayout>
+    <include
+        layout="@layout/include_play_bar"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="@dimen/play_bar_height"
+        android:layout_gravity="bottom" />
+    </LinearLayout>
+
 </LinearLayout>
