--- a/app/src/main/res/layout/activity_local_music.xml
+++ b/app/src/main/res/layout/activity_local_music.xml
@@ -7,4 +7,9 @@
 
     <include layout="@layout/include_app_bar" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_local_music"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </android.support.design.widget.CoordinatorLayout>
