--- a/app/src/main/res/layout/rv_music.xml
+++ b/app/src/main/res/layout/rv_music.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/item_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="歌曲名"
+        android:text="未知"
+        android:textColor="@color/black_50p"
         android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="18sp" />
 
 
     <TextView
@@ -17,8 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_song"
-        android:text="歌手"
+        android:text="未知"
         android:textSize="15sp" />
-
 
 </RelativeLayout>
