--- a/app/src/main/res/layout/activity_local_music.xml
+++ b/app/src/main/res/layout/activity_local_music.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.nilin.etherealmuisc.activity.LocalMusicActivity">
 
     <include layout="@layout/include_app_bar" />
@@ -12,4 +13,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
