--- a/app/src/main/res/layout/activity_music_include.xml
+++ b/app/src/main/res/layout/activity_music_include.xml
@@ -23,23 +23,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_weight="10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="100"
+        android:paddingBottom="1dp" />
 
     <include
         layout="@layout/include_play_bar"
+        android:id="@+id/music_play_bar"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="@dimen/play_bar_height"
-        android:layout_gravity="bottom" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
 </LinearLayout>
