--- a/app/src/main/res/layout/activity_music_include.xml
+++ b/app/src/main/res/layout/activity_music_include.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +9,8 @@
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="100"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_above="@+id/music_play_bar">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
@@ -33,16 +33,17 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="100"
-            android:paddingBottom="1dp" />
+            android:layout_height="wrap_content" />
+
     </FrameLayout>
+
+
 
     <include
         android:id="@+id/music_play_bar"
         layout="@layout/include_play_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_height="@dimen/play_bar_height"
+android:layout_alignParentBottom="true"/>
 
-</LinearLayout>
+</RelativeLayout>
