--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00bbff</color>
-    <color name="colorPrimaryDark">#0088ff</color>
+    <color name="colorPrimaryDark">#00bbff</color>
     <color name="colorAccent">#00e1ff</color>
 
     <color name="white">@android:color/white</color>
