Updata play bar

--- a/app/src/main/res/layout/include_play_bar.xml
+++ b/app/src/main/res/layout/include_play_bar.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
+                android:paddingStart="5dp"
                 android:textColor="@color/grey"
                 android:textSize="12sp" />
         </LinearLayout>
