--- a/app/src/main/res/layout/include_music_search_bar.xml
+++ b/app/src/main/res/layout/include_music_search_bar.xml
@@ -11,6 +11,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:paddingStart="7dp"
+        android:paddingEnd="7dp"
         android:orientation="horizontal"
         tools:ignore="UselessParent">
 
