--- a/app/src/main/res/layout/activity_scan_music.xml
+++ b/app/src/main/res/layout/activity_scan_music.xml
@@ -10,16 +10,6 @@
         android:id="@+id/include"
         layout="@layout/include_app_bar" />
 
-    <!--<ImageView-->
-    <!--android:id="@+id/iv_scan_music"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/include"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:layout_marginTop="50dp"-->
-    <!--app:srcCompat="@drawable/scan_music"-->
-    <!--tools:ignore="MissingConstraints" />-->
-
     <com.nilin.etherealmuisc.view.ShaderView
         android:id="@+id/sv"
         android:layout_width="200dp"
@@ -46,20 +36,20 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/custom_scan_music"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:text="自定义扫描"
-            tools:ignore="MissingConstraints" />
+        <!--<Button-->
+            <!--android:id="@+id/custom_scan_music"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="自定义扫描"-->
+            <!--tools:ignore="MissingConstraints" />-->
 
-        <Button
-            android:id="@+id/scan_settings"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:text="扫描设置"
-            tools:ignore="MissingConstraints" />
+        <!--<Button-->
+            <!--android:id="@+id/scan_settings"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="扫描设置"-->
+            <!--tools:ignore="MissingConstraints" />-->
     </LinearLayout>
 </RelativeLayout>
