--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffb764">
+    android:background="@color/colorPrimary">
 
 
     <ImageView
         android:id="@+id/welcomeImg"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/icon"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="100dp"/>
 
     <TextView
         android:id="@+id/welcomeText"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:textSize="35dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/welcomeImg" />
