Add music charts UI.

--- a/app/src/main/res/layout/fragment_online.xml
+++ b/app/src/main/res/layout/fragment_online.xml
@@ -4,11 +4,25 @@
     android:layout_height="match_parent"
     tools:context="com.nilin.etherealmuisc.fragment.OnlineFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_vertical"
-        android:text="空灵音乐" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="音乐排行榜"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_online_music"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </FrameLayout>
