--- a/app/src/main/res/layout/include_music_search_bar.xml
+++ b/app/src/main/res/layout/include_music_search_bar.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
+    android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
-    android:minHeight="?attr/actionBarSize"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -18,17 +17,17 @@
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="?attr/actionBarSize"
+            android:layout_width="55dp"
             android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1"
             android:contentDescription="@null"
             android:scaleType="centerInside"
-            android:layout_weight="1"
             android:src="@drawable/ic_back" />
 
         <EditText
             android:id="@+id/tv_local_music"
             android:layout_width="220dp"
-            android:layout_height="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:background="@null"
             android:hint="歌曲名、歌手名"
             android:textColor="@drawable/music_tab_bar_text_color_selector"
@@ -36,20 +35,20 @@
 
         <ImageView
             android:id="@+id/tv_online_music"
-            android:layout_width="?attr/actionBarSize"
+            android:layout_width="55dp"
             android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1"
             android:contentDescription="@null"
             android:scaleType="centerInside"
-            android:layout_weight="1"
             android:src="@drawable/ic_cancel" />
 
         <ImageView
             android:id="@+id/iv_search"
-            android:layout_width="?attr/actionBarSize"
+            android:layout_width="55dp"
             android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1"
             android:contentDescription="@null"
             android:scaleType="centerInside"
-            android:layout_weight="1"
             android:src="@drawable/ic_search" />
     </LinearLayout>
 
