--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -2,14 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context="com.nilin.etherealmuisc.fragment.LocalFragment">
 
     <Button
         android:id="@+id/bt_local_music"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/colorAccent"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
         android:text="@string/local_music" />
+
+    <Button
+        android:id="@+id/bt_my_favorite"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:background="@color/colorPrimary"
+        android:padding="5dp"
+        android:text="@string/my_favorite" />
 
 </RelativeLayout>
