--- a/app/src/main/res/layout/fragment_local_music.xml
+++ b/app/src/main/res/layout/fragment_local_music.xml
@@ -10,6 +10,7 @@
         android:id="@+id/rv_local_music"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="1dp" />
+        android:paddingBottom="1dp"
+        android:padding="5dp"/>
 
 </LinearLayout>
