--- a/app/src/main/res/layout/include_app_bar.xml
+++ b/app/src/main/res/layout/include_app_bar.xml
@@ -9,7 +9,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/colorPrimary"
             app:navigationIcon="@drawable/ic_back"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
