--- a/app/src/main/res/drawable/play_progressbar.xml
+++ b/app/src/main/res/drawable/play_progressbar.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@android:id/background"
+        android:drawable="@drawable/progress_default_background" />
     <item android:id="@+android:id/progress">
-        <clip android:drawable="@drawable/play_activity_progressbar" />
+        <clip android:drawable="@drawable/progressbar_play_activity" />
     </item>
 </layer-list>
