--- a/app/src/main/res/layout/fragment_online.xml
+++ b/app/src/main/res/layout/fragment_online.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="音乐排行榜"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
