--- a/app/src/main/res/layout/include_music_tab_bar.xml
+++ b/app/src/main/res/layout/include_music_tab_bar.xml
@@ -25,19 +25,29 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/local_music"
+            android:text="@string/app_name"
+            android:textStyle="bold"
             android:textColor="@drawable/music_tab_bar_text_color_selector"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/tv_online_music"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:gravity="center"
-            android:text="@string/online_music"
-            android:textColor="@drawable/music_tab_bar_text_color_selector"
-            android:textSize="15sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_local_music"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/local_music"-->
+            <!--android:textColor="@drawable/music_tab_bar_text_color_selector"-->
+            <!--android:textSize="15sp" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_online_music"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginLeft="30dp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/online_music"-->
+            <!--android:textColor="@drawable/music_tab_bar_text_color_selector"-->
+            <!--android:textSize="15sp" />-->
     </LinearLayout>
 
     <ImageView
