--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,15 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/colorAccent"
+        android:centerColor="@color/colorPrimaryDark"
         android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimaryDark"
         android:type="linear" />
+
+    <!--<gradient-->
+        <!--android:angle="135"-->
+        <!--android:centerColor="@color/colorAccent"-->
+        <!--android:endColor="@color/colorPrimaryDark"-->
+        <!--android:startColor="@color/colorPrimary"-->
+        <!--android:type="linear" />-->
 </shape>
