--- a/app/src/main/res/layout/include_music_search_bar.xml
+++ b/app/src/main/res/layout/include_music_search_bar.xml
@@ -10,23 +10,23 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingStart="7dp"
-        android:paddingEnd="7dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp"
         android:orientation="horizontal"
         tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="55dp"
+            android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
-            android:layout_weight="1"
+
             android:contentDescription="@null"
             android:scaleType="centerInside"
             android:src="@drawable/ic_back" />
 
         <EditText
             android:id="@+id/tv_local_music"
-            android:layout_width="220dp"
+            android:layout_width="230dp"
             android:layout_height="?attr/actionBarSize"
             android:background="@null"
             android:hint="歌曲名、歌手名"
@@ -35,18 +35,18 @@
 
         <ImageView
             android:id="@+id/tv_online_music"
-            android:layout_width="55dp"
-            android:layout_height="?attr/actionBarSize"
             android:layout_weight="1"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
             android:contentDescription="@null"
             android:scaleType="centerInside"
             android:src="@drawable/ic_cancel" />
 
         <ImageView
             android:id="@+id/iv_search"
-            android:layout_width="55dp"
+            android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
-            android:layout_weight="1"
+            android:layout_gravity="end"
             android:contentDescription="@null"
             android:scaleType="centerInside"
             android:src="@drawable/ic_search" />
